# src/main/resources/swagger/api.yaml
@@ -28,6 +28,10 @@ paths:
       responses:
         '200':
           description: Login successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AdminLoginResponse'
         '401':
           description: Unauthorized - Invalid credentials
 
@@ -44,8 +48,6 @@ paths:
               properties:
                 hotel:
                   $ref: '#/components/schemas/Hotel'
-                owner:
-                  $ref: '#/components/schemas/Owner'
       responses:
         '201':
           description: Hotel and Owner added successfully
@@ -123,6 +125,7 @@ components:
         city:
           type: string
           description: City of the address
+
     Owner:
       type: object
       properties:
@@ -179,10 +182,35 @@ components:
           description: Unique identifier for the admin request
         owner:
           $ref: '#/components/schemas/Owner'
-
         type:
           type: string
           description: Type of request made by the admin
           enum:
             - passwordRequest
             - updateDetailsRequest
+
+    AdminLoginResponse:
+      type: object
+      properties:
+        status:
+          type: string
+          example: success
+          description: Status of the login request
+        message:
+          type: string
+          example: Login successful
+          description: Message describing the result of the login attempt
+        data:
+          $ref: '#/components/schemas/AdminLoginData'
+
+    AdminLoginData:
+      type: object
+      properties:
+        token:
+          type: string
+          description: JWT token for authorization
+          example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNjEyMzQ1Njc4LCJleHBpcmF0aW9uIjoxNjEyMzQ5Mjc4fQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c
+        expiresIn:
+          type: integer
+          description: Time in seconds until the token expires
+          example: 3600
